--- a/an-identity-auth/an-identity-auth-client/pom.xml
+++ b/an-identity-auth/an-identity-auth-client/pom.xml
@@ -2,18 +2,15 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.autonubil.identity</groupId>
-    <artifactId>an-identity</artifactId>
-
-    
-
+    <artifactId>an-identity-auth</artifactId>
     <version>0.1.3-SNAPSHOT</version>
-
   </parent>
-  <artifactId>an-identity-auth</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-  	<module>an-identity-auth-api</module>
-  	<module>an-identity-auth-impl</module>
-  	<module>an-identity-auth-client</module>
-  </modules>
+  <artifactId>an-identity-auth-client</artifactId>
+  <dependencies>
+  	<dependency>
+	    <groupId>com.autonubil.identity</groupId>
+	    <artifactId>an-identity-auth-api</artifactId>
+	    <version>0.1.3-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
 </project>
