--- a/an-identity-auth/an-identity-auth-client/pom.xml
+++ b/an-identity-auth/an-identity-auth-client/pom.xml
@@ -12,5 +12,9 @@
 	    <artifactId>an-identity-auth-api</artifactId>
 	    <version>0.1.9-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.security</groupId>
+  		<artifactId>spring-security-core</artifactId>
+  	</dependency>
   </dependencies>
 </project>
