--- a/an-identity-auth/an-identity-auth-client/pom.xml
+++ b/an-identity-auth/an-identity-auth-client/pom.xml
@@ -1,20 +1,21 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.autonubil.identity</groupId>
-    <artifactId>an-identity-auth</artifactId>
-    <version>0.1.9-SNAPSHOT</version>
-  </parent>
-  <artifactId>an-identity-auth-client</artifactId>
-  <dependencies>
-  	<dependency>
-	    <groupId>com.autonubil.identity</groupId>
-	    <artifactId>an-identity-auth-api</artifactId>
-	    <version>0.1.9-SNAPSHOT</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.springframework.security</groupId>
-  		<artifactId>spring-security-core</artifactId>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.autonubil.identity</groupId>
+		<artifactId>an-identity-auth</artifactId>
+		<version>0.1.9-SNAPSHOT</version>
+	</parent>
+	<artifactId>an-identity-auth-client</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>com.autonubil.identity</groupId>
+			<artifactId>an-identity-auth-api</artifactId>
+			<version>0.1.9-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+		</dependency>
+	</dependencies>
 </project>
