--- a/an-identity-ui/src/main/resources/public/package.json
+++ b/an-identity-ui/src/main/resources/public/package.json
@@ -7,6 +7,7 @@
     "underscore": "1.8.3",
     "restangular": "1.6.1",
     "moment" : "2.17.1",
+    "angular-moment" : "1.0.1",
     "angular-date-picker": "1.3.5",
     "angular-upload": "1.0.13"
   },
