--- a/an-identity-app/pom.xml
+++ b/an-identity-app/pom.xml
@@ -12,6 +12,10 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -20,13 +24,8 @@
 			<artifactId>an-identity-ui</artifactId>
 			<version>0.1.13-SNAPSHOT</version>
 		</dependency>
-		<!-- 
-		<dependency>
-			<groupId>com.autonubil.identity</groupId>
-			<artifactId>an-identity-automigrate</artifactId>
-			<version>0.0.1059-SNAPSHOT</version>
-		</dependency>
-		 -->
+		<!-- <dependency> <groupId>com.autonubil.identity</groupId> <artifactId>an-identity-automigrate</artifactId> 
+			<version>0.0.1059-SNAPSHOT</version> </dependency> -->
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-db-common</artifactId>
@@ -82,20 +81,10 @@
 			<artifactId>an-identity-less</artifactId>
 			<version>0.1.13-SNAPSHOT</version>
 		</dependency>
-		<!--
-		<dependency>
-		    <groupId>io.prometheus</groupId>
-		    <artifactId>simpleclient_spring_boot</artifactId>
-		    <version>0.0.21</version>
-		</dependency>
-
-
-		<dependency>
-			<groupId>net.simpledynamics</groupId>
-			<artifactId>openid-connect-server-spring-boot-config</artifactId>
-			<version>0.1.3</version>
-		</dependency>
-		-->
+		<!-- <dependency> <groupId>io.prometheus</groupId> <artifactId>simpleclient_spring_boot</artifactId> 
+			<version>0.0.21</version> </dependency> <dependency> <groupId>net.simpledynamics</groupId> 
+			<artifactId>openid-connect-server-spring-boot-config</artifactId> <version>0.1.3</version> 
+			</dependency> -->
 	</dependencies>
 	<build>
 		<plugins>
