--- a/an-identity-ui/src/main/js/package.json
+++ b/an-identity-ui/src/main/js/package.json
@@ -9,7 +9,8 @@
     "moment" : "2.17.1",
     "angular-moment" : "1.0.1",
     "angular-date-picker": "1.3.5",
-    "angular-upload": "1.0.13"
+    "angular-upload": "1.0.13",
+    "angular-plugin": "0.0.1"
   },
   "devDependencies": {
     "gulp": "3.9.1",
