--- a/an-identity-persistence/an-identity-persistence-impl/pom.xml
+++ b/an-identity-persistence/an-identity-persistence-impl/pom.xml
@@ -13,5 +13,10 @@
 			<artifactId>an-identity-persistence-api</artifactId>
 			<version>0.1.13-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk16</artifactId>
+			<version>1.46</version>
+		</dependency>
 	</dependencies>
 </project>
