first draft of the ovpn integration

--- a/an-identity-ovpn/an-identity-ovpn-common/pom.xml
+++ b/an-identity-ovpn/an-identity-ovpn-common/pom.xml
@@ -13,5 +13,16 @@
 			<artifactId>an-identity-ovpn-api</artifactId>
 			<version>0.1.13-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.autonubil.identity</groupId>
+			<artifactId>an-identity-db-common</artifactId>
+			<version>0.1.13-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.autonubil.identity</groupId>
+			<artifactId>an-identity-auth-api</artifactId>
+			<version>0.1.13-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
