--- a/an-identity-ovpn/an-identity-ovpn-ui/src/main/js/package.json
+++ b/an-identity-ovpn/an-identity-ovpn-ui/src/main/js/package.json
@@ -12,6 +12,6 @@
     "gulp-util": "^3.0.7",
     "gulp-watch": "4.3.5"
   },
-  "name": "an-intranet-me-ui",
+  "name": "an-intranet-ovpn-ui",
   "version": "0.0.1"
 }
