--- a/an-identity-persistence/an-identity-persistence-impl/pom.xml
+++ b/an-identity-persistence/an-identity-persistence-impl/pom.xml
@@ -18,5 +18,10 @@
 			<artifactId>bcprov-jdk16</artifactId>
 			<version>1.46</version>
 		</dependency>
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>2.2.0</version>
+		</dependency>
 	</dependencies>
 </project>
