--- a/an-identity-mail/an-identity-mail-ui/pom.xml
+++ b/an-identity-mail/an-identity-mail-ui/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-mail</artifactId>
-		<version>0.1.13-SNAPSHOT</version>
+		<version>0.1.13</version>
 	</parent>
 	<artifactId>an-identity-mail-ui</artifactId>
 	<build>
