[ci-skip] release (0.1.13) finished, prepare for development ...

--- a/an-identity-ovpn/an-identity-ovpn-common/pom.xml
+++ b/an-identity-ovpn/an-identity-ovpn-common/pom.xml
@@ -4,25 +4,25 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-ovpn</artifactId>
-		<version>0.1.13</version>
+		<version>0.1.14-SNAPSHOT</version>
 	</parent>
 	<artifactId>an-identity-ovpn-common</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ovpn-api</artifactId>
-			<version>0.1.13</version>
+			<version>0.1.14-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-db-common</artifactId>
-			<version>0.1.13</version>
+			<version>0.1.14-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-auth-api</artifactId>
-			<version>0.1.13</version>
+			<version>0.1.14-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
