--- a/an-identity-apps/an-identity-apps-api/pom.xml
+++ b/an-identity-apps/an-identity-apps-api/pom.xml
@@ -6,7 +6,7 @@
 
     
 
-    <version>0.1.13</version>
+    <version>0.1.14-SNAPSHOT</version>
 
   </parent>
   <artifactId>an-identity-apps-api</artifactId>
