--- a/an-identity-auth/an-identity-auth-api/pom.xml
+++ b/an-identity-auth/an-identity-auth-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-auth</artifactId>
-		<version>0.1.13</version>
+		<version>0.1.14-SNAPSHOT</version>
 
 	</parent>
 	<artifactId>an-identity-auth-api</artifactId>
