--- a/an-identity-certs/pom.xml
+++ b/an-identity-certs/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.autonubil.identity</groupId>
     <artifactId>an-identity</artifactId>
-    <version>0.1.13</version>
+    <version>0.1.14-SNAPSHOT</version>
   </parent>
   <artifactId>an-identity-certs</artifactId>
   <packaging>pom</packaging>
