--- a/an-identity-db/an-identity-db-common/pom.xml
+++ b/an-identity-db/an-identity-db-common/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-db</artifactId>
-		<version>0.1.13</version>
+		<version>0.1.14-SNAPSHOT</version>
 
 	</parent>
 	<artifactId>an-identity-db-common</artifactId>
