--- a/an-identity-ldap/an-identity-ldap-api/pom.xml
+++ b/an-identity-ldap/an-identity-ldap-api/pom.xml
@@ -4,14 +4,14 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-ldap</artifactId>
-		<version>0.1.13</version>
+		<version>0.1.14-SNAPSHOT</version>
 	</parent>
 	<artifactId>an-identity-ldap-api</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-auth-api</artifactId>
-			<version>0.1.13</version>
+			<version>0.1.14-SNAPSHOT</version>
 
 		</dependency>
 	</dependencies>
