--- a/an-identity-ldapotp/pom.xml
+++ b/an-identity-ldapotp/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.autonubil.identity</groupId>
     <artifactId>an-identity</artifactId>
-    <version>0.1.13</version>
+    <version>0.1.14-SNAPSHOT</version>
   </parent>
   <artifactId>an-identity-ldapotp</artifactId>
   <packaging>pom</packaging>
@@ -11,12 +11,12 @@
   	<dependency>
 	    <groupId>com.autonubil.identity</groupId>
 	    <artifactId>an-identity-ldap-api</artifactId>
-	    <version>0.1.13</version>
+	    <version>0.1.14-SNAPSHOT</version>
   	</dependency>
   	<dependency>
 	    <groupId>com.autonubil.identity</groupId>
 	    <artifactId>an-identity-auth-api</artifactId>
-	    <version>0.1.13</version>
+	    <version>0.1.14-SNAPSHOT</version>
   	</dependency>
   </dependencies>
   <modules>
