--- a/an-identity-ovpn/an-identity-ovpn-common/pom.xml
+++ b/an-identity-ovpn/an-identity-ovpn-common/pom.xml
@@ -24,5 +24,10 @@
 			<artifactId>an-identity-auth-api</artifactId>
 			<version>0.1.14-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+		</dependency>
 	</dependencies>
 </project>
