--- a/an-identity-ovpn/an-identity-ovpn-common/pom.xml
+++ b/an-identity-ovpn/an-identity-ovpn-common/pom.xml
@@ -24,6 +24,11 @@
 			<artifactId>an-identity-auth-api</artifactId>
 			<version>0.1.15-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.autonubil.identity</groupId>
+			<artifactId>an-identity-auth-impl</artifactId>
+			<version>0.1.15-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.velocity</groupId>
