renamed ovpn server config to session config

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
 		<module>an-identity-apps</module>
 		<module>an-identity-audit</module>
 		<module>an-identity-auth</module>
-		<module>an-identity-automigrate</module>
 		<module>an-identity-db</module>
 		<module>an-identity-ldap</module>
 		<module>an-identity-ldapotp</module>
@@ -18,12 +17,16 @@
 		<module>an-identity-less</module>
 		<module>an-identity-localauth</module>
 		<module>an-identity-mail</module>
-		<module>an-identity-persistence</module>
 		<module>an-identity-ui</module>
 		<module>an-identity-util</module>
 		<module>an-identity-ovpn</module>
 		<module>an-identity-me</module>
+		<module>an-identity-secrets</module>
+		<!-- 
+		<module>an-identity-automigrate</module>
 		<module>an-identity-certs</module>
+		<module>an-identity-persistence</module>
+		 -->
 	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>	
