--- a/an-identity-auth/an-identity-auth-client/pom.xml
+++ b/an-identity-auth/an-identity-auth-client/pom.xml
@@ -4,14 +4,14 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-auth</artifactId>
-		<version>0.1.18-SNAPSHOT</version>
+		<version>0.1.18</version>
 	</parent>
 	<artifactId>an-identity-auth-client</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-auth-api</artifactId>
-			<version>0.1.18-SNAPSHOT</version>
+			<version>0.1.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
