--- a/an-identity-ovpn/an-identity-ovpn-vault/pom.xml
+++ b/an-identity-ovpn/an-identity-ovpn-vault/pom.xml
@@ -4,14 +4,14 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-ovpn</artifactId>
-		<version>0.1.18-SNAPSHOT</version>
+		<version>0.1.18</version>
 	</parent>
 	<artifactId>an-identity-ovpn-vault</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ovpn-common</artifactId>
-			<version>0.1.18-SNAPSHOT</version>
+			<version>0.1.18</version>
 		</dependency>
 
 		<dependency>
