--- a/an-identity-ui/pom.xml
+++ b/an-identity-ui/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity</artifactId>
-		<version>0.1.18-SNAPSHOT</version>
+		<version>0.1.18</version>
 	</parent>
 	<artifactId>an-identity-ui</artifactId>
 	<dependencies>
