--- a/an-identity-secrets/an-identity-secrets-impl/pom.xml
+++ b/an-identity-secrets/an-identity-secrets-impl/pom.xml
@@ -10,18 +10,18 @@
   	<dependency>
   		<groupId>com.autonubil.identity</groupId>
   		<artifactId>an-identity-secrets-api</artifactId>
-  		<version>0.1.17-SNAPSHOT</version>
+  		<version>0.1.18</version>
   	</dependency>
   	
   	<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-db-common</artifactId>
-			<version>0.1.17-SNAPSHOT</version>
+			<version>0.1.18</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-auth-api</artifactId>
-			<version>0.1.17-SNAPSHOT</version>
+			<version>0.1.18</version>
 		</dependency>
 		
   </dependencies>
