--- a/an-identity-auth/pom.xml
+++ b/an-identity-auth/pom.xml
@@ -6,7 +6,7 @@
 
     
 
-    <version>0.1.21-SNAPSHOT</version>
+    <version>0.1.21</version>
 
   </parent>
   <artifactId>an-identity-auth</artifactId>
