--- a/an-identity-mail/an-identity-mail-api/pom.xml
+++ b/an-identity-mail/an-identity-mail-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-mail</artifactId>
-		<version>0.1.21-SNAPSHOT</version>
+		<version>0.1.21</version>
 
 	</parent>
 	<artifactId>an-identity-mail-api</artifactId>
