--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.autonubil.identity</groupId>
 	<artifactId>an-identity</artifactId>
-	<version>0.1.21-SNAPSHOT</version>
+	<version>0.1.21</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>an-identity-app</module>
@@ -25,7 +25,6 @@
 		<module>an-identity-automigrate</module>
 		<module>an-identity-certs</module>
 		<module>an-identity-persistence</module>
-		<module>an-identity-openid</module>
 	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>	
