--- a/an-identity-ldapusers/an-identity-ldapusers-ui/pom.xml
+++ b/an-identity-ldapusers/an-identity-ldapusers-ui/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-ldapusers</artifactId>
-		<version>0.1.21</version>
+		<version>0.1.22-SNAPSHOT</version>
 	</parent>
 	<artifactId>an-identity-ldapusers-ui</artifactId>
 	<build>
