--- a/an-identity-ldapusers/pom.xml
+++ b/an-identity-ldapusers/pom.xml
@@ -6,7 +6,7 @@
 
     
 
-    <version>0.1.21</version>
+    <version>0.1.22-SNAPSHOT</version>
 
   </parent>
   <artifactId>an-identity-ldapusers</artifactId>
