--- a/an-identity-persistence/an-identity-persistence-api/pom.xml
+++ b/an-identity-persistence/an-identity-persistence-api/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.autonubil.identity</groupId>
     <artifactId>an-identity-persistence</artifactId>
-    <version>0.1.21</version>
+    <version>0.1.22-SNAPSHOT</version>
   </parent>
   <artifactId>an-identity-persistence-api</artifactId>
 </project>
