--- a/an-identity-app/pom.xml
+++ b/an-identity-app/pom.xml
@@ -136,6 +136,16 @@
 			<artifactId>an-identity-ovpn-ui</artifactId>
 			<version>0.1.23-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.autonubil.identity</groupId>
+			<artifactId>an-identity-openid-impl</artifactId>
+			<version>0.1.23-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.autonubil.identity</groupId>
+			<artifactId>an-identity-openid-ui</artifactId>
+			<version>0.1.23-SNAPSHOT</version>
+		</dependency>
 		<!-- <dependency> <groupId>io.prometheus</groupId> <artifactId>simpleclient_spring_boot</artifactId> 
 			<version>0.0.21</version> </dependency> <dependency> <groupId>net.simpledynamics</groupId> 
 			<artifactId>openid-connect-server-spring-boot-config</artifactId> <version>0.1.3</version> 
