--- a/an-identity-ui/src/main/js/package.json
+++ b/an-identity-ui/src/main/js/package.json
@@ -10,6 +10,7 @@
     "angular-moment" : "1.0.1",
     "angular-date-picker": "1.3.5",
     "angular-upload": "1.0.13",
+    "angular-spinner": "1.0.1",
     "angular-plugin": "0.0.8",
     "bootbox" : "4.4.0"
   },
