--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,13 @@
 		<module>an-identity-automigrate</module>
 		<module>an-identity-certs</module>
 		<module>an-identity-persistence</module>
+		<module>an-identity-openid</module>
 	</modules>
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>	
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<springframework.version>4.3.8.RELEASE</springframework.version>
 		<springboot.version>1.4.6.RELEASE</springboot.version>
-		<!-- 
-		<springsecurity.version>4.2.2.RELEASE</springsecurity.version>
-		 -->
+		<!-- <springsecurity.version>4.2.2.RELEASE</springsecurity.version> -->
 		<jackson.version>2.8.4</jackson.version>
 		<commons-lang3.version>3.5</commons-lang3.version>
 		<commons-io.version>2.5</commons-io.version>
@@ -64,7 +63,7 @@
 				<artifactId>flyway-core</artifactId>
 				<version>4.0.1</version>
 			</dependency>
-   			<dependency>
+			<dependency>
 				<!-- Import dependency management from Spring Boot -->
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
@@ -148,25 +147,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot</artifactId>
 		</dependency>
-		<!-- 
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core</artifactId>
-			<version>${springsecurity.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core</artifactId>
-		</dependency>
-		<dependency>
-			  <groupId>org.springframework.security</groupId>
-			  <artifactId>spring-security-web</artifactId>
-		</dependency>
-		<dependency>
-			  <groupId>org.springframework.security</groupId>
-			  <artifactId>spring-security-config</artifactId>
-		</dependency>
-		 -->
+		<!-- <dependency> <groupId>org.springframework.security</groupId> <artifactId>spring-security-core</artifactId> 
+			<version>${springsecurity.version}</version> </dependency> <dependency> <groupId>org.springframework.security</groupId> 
+			<artifactId>spring-security-core</artifactId> </dependency> <dependency> 
+			<groupId>org.springframework.security</groupId> <artifactId>spring-security-web</artifactId> 
+			</dependency> <dependency> <groupId>org.springframework.security</groupId> 
+			<artifactId>spring-security-config</artifactId> </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
