--- a/an-identity-openid/an-identity-openid-impl/pom.xml
+++ b/an-identity-openid/an-identity-openid-impl/pom.xml
@@ -25,8 +25,13 @@
 			<artifactId>an-identity-auth-impl</artifactId>
 			<version>0.1.23-SNAPSHOT</version>
 		</dependency>
-		
-		
+		<dependency>
+			<groupId>com.autonubil.identity</groupId>
+			<artifactId>an-identity-secrets-impl</artifactId>
+			<version>0.1.23-SNAPSHOT</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-db-common</artifactId>
@@ -58,5 +63,6 @@
 			<artifactId>java-jwt</artifactId>
 			<version>3.2.0</version>
 		</dependency>
+
 	</dependencies>
 </project>
