--- a/an-identity-aws/an-identity-aws-impl/src/main/resources/aws.properties
+++ b/an-identity-aws/an-identity-aws-impl/src/main/resources/aws.properties
@@ -1,3 +1,3 @@
 aws.proxy.enabled=true
-aws.access_key=AKIAIN2XJNT33QC4NAMA
-aws.secret_access_ky=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
+aws.access_key=<use command line or environment>
+aws.secret_access_ky=<use command line or environment>
