--- a/an-identity-localauth/pom.xml
+++ b/an-identity-localauth/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity</artifactId>
-		<version>0.1.24-SNAPSHOT</version>
+		<version>0.1.24</version>
 
 	</parent>
 	<artifactId>an-identity-localauth</artifactId>
@@ -12,27 +12,27 @@
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-db-common</artifactId>
-			<version>0.1.24-SNAPSHOT</version>
+			<version>0.1.24</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-util</artifactId>
-			<version>0.1.24-SNAPSHOT</version>
+			<version>0.1.24</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-auth-api</artifactId>
-			<version>0.1.24-SNAPSHOT</version>
+			<version>0.1.24</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-audit-api</artifactId>
-			<version>0.1.24-SNAPSHOT</version>
+			<version>0.1.24</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-mail-api</artifactId>
-			<version>0.1.24-SNAPSHOT</version>
+			<version>0.1.24</version>
 		</dependency>
 	  	<dependency>
 	  		<groupId>org.springframework.security</groupId>
