--- a/an-identity-ovpn/an-identity-ovpn-ui/pom.xml
+++ b/an-identity-ovpn/an-identity-ovpn-ui/pom.xml
@@ -4,14 +4,14 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-ovpn</artifactId>
-		<version>0.1.24-SNAPSHOT</version>
+		<version>0.1.24</version>
 	</parent>
 	<artifactId>an-identity-ovpn-ui</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ovpn-common</artifactId>
-			<version>0.1.24-SNAPSHOT</version>
+			<version>0.1.24</version>
 		</dependency>
 	</dependencies>
 	<build>
