[ci-skip] release (0.1.24) finished, prepare for development ...

--- a/an-identity-app/pom.xml
+++ b/an-identity-app/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity</artifactId>
-		<version>0.1.24</version>
+		<version>0.1.25-SNAPSHOT</version>
 	</parent>
 	<artifactId>an-identity-app</artifactId>
 	<properties>
@@ -22,135 +22,135 @@
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ui</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<!-- <dependency> <groupId>com.autonubil.identity</groupId> <artifactId>an-identity-automigrate</artifactId> 
 			<version>0.0.1059-SNAPSHOT</version> </dependency> -->
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-db-common</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-auth-impl</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-auth-ui</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-db-pgsql</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-localauth</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ldap-impl</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ldap-ui</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ldapusers-impl</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ldapusers-ui</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-audit-impl</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-mail-impl</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-mail-ui</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-apps-impl</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-apps-ui</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ldapotp-impl</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ldapotp-ui</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-less</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-me-ui</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-persistence-impl</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ovpn-common</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ovpn-vault</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ovpn-ui</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-openid-impl</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-openid-ui</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-secrets-api</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 
 
@@ -158,7 +158,7 @@
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-certs-impl-acme</artifactId>
-			<version>0.1.24</version>
+			<version>0.1.25-SNAPSHOT</version>
 		</dependency>
 <!--
 		<dependency>
