--- a/an-identity-audit/pom.xml
+++ b/an-identity-audit/pom.xml
@@ -6,7 +6,7 @@
 
     
 
-    <version>0.1.24</version>
+    <version>0.1.25-SNAPSHOT</version>
 
   </parent>
   <artifactId>an-identity-audit</artifactId>
