--- a/an-identity-certs/an-identity-certs-api/pom.xml
+++ b/an-identity-certs/an-identity-certs-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-certs</artifactId>
-		<version>0.1.24</version>
+		<version>0.1.25-SNAPSHOT</version>
 	</parent>
 	<artifactId>an-identity-certs-api</artifactId>
 
