--- a/an-identity-ldapotp/an-identity-ldapotp-api/pom.xml
+++ b/an-identity-ldapotp/an-identity-ldapotp-api/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.autonubil.identity</groupId>
     <artifactId>an-identity-ldapotp</artifactId>
-    <version>0.1.24</version>
+    <version>0.1.25-SNAPSHOT</version>
   </parent>
   <artifactId>an-identity-ldapotp-api</artifactId>
 </project>
