--- a/an-identity-audit/an-identity-audit-impl/pom.xml
+++ b/an-identity-audit/an-identity-audit-impl/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-audit</artifactId>
-		<version>0.1.29-SNAPSHOT</version>
+		<version>0.1.29</version>
 
 	</parent>
 	<artifactId>an-identity-audit-impl</artifactId>
@@ -12,13 +12,13 @@
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-audit-api</artifactId>
-			<version>0.1.29-SNAPSHOT</version>
+			<version>0.1.29</version>
 
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-db-common</artifactId>
-			<version>0.1.29-SNAPSHOT</version>
+			<version>0.1.29</version>
 
 		</dependency>
 	</dependencies>
