--- a/an-identity-ldap/pom.xml
+++ b/an-identity-ldap/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity</artifactId>
-		<version>0.1.29-SNAPSHOT</version>
+		<version>0.1.29</version>
 
 	</parent>
 	<artifactId>an-identity-ldap</artifactId>
