--- a/an-identity-ldapotp/an-identity-ldapotp-impl/pom.xml
+++ b/an-identity-ldapotp/an-identity-ldapotp-impl/pom.xml
@@ -4,19 +4,19 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-ldapotp</artifactId>
-		<version>0.1.29-SNAPSHOT</version>
+		<version>0.1.29</version>
 	</parent>
 	<artifactId>an-identity-ldapotp-impl</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-ldapotp-api</artifactId>
-			<version>0.1.29-SNAPSHOT</version>
+			<version>0.1.29</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-util</artifactId>
-			<version>0.1.29-SNAPSHOT</version>
+			<version>0.1.29</version>
 		</dependency>
 	</dependencies>
 </project>
