--- a/an-identity-certs/an-identity-certs-impl-local/pom.xml
+++ b/an-identity-certs/an-identity-certs-impl-local/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.autonubil.identity</groupId>
     <artifactId>an-identity-certs</artifactId>
-    <version>0.1.29</version>
+    <version>0.1.30-SNAPSHOT</version>
   </parent>
   <artifactId>an-identity-certs-impl-local</artifactId>
 </project>
