--- a/an-identity-ldapusers/an-identity-ldapusers-api/pom.xml
+++ b/an-identity-ldapusers/an-identity-ldapusers-api/pom.xml
@@ -6,7 +6,7 @@
 
     
 
-    <version>0.1.29</version>
+    <version>0.1.30-SNAPSHOT</version>
 
   </parent>
   <artifactId>an-identity-ldapusers-api</artifactId>
