--- a/an-identity-certs/an-identity-certs-impl-acme/pom.xml
+++ b/an-identity-certs/an-identity-certs-impl-acme/pom.xml
@@ -4,19 +4,19 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-certs</artifactId>
-		<version>0.1.34-SNAPSHOT</version>
+		<version>0.1.34</version>
 	</parent>
 	<artifactId>an-identity-certs-impl-acme</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-secrets-impl</artifactId>
-			<version>0.1.34-SNAPSHOT</version>
+			<version>0.1.34</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-certs-api</artifactId>
-			<version>0.1.34-SNAPSHOT</version>
+			<version>0.1.34</version>
 		</dependency>
 
 		<dependency>
