--- a/an-identity-openid/an-identity-openid-ui/pom.xml
+++ b/an-identity-openid/an-identity-openid-ui/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.autonubil.identity</groupId>
     <artifactId>an-identity-openid</artifactId>
-    <version>0.1.34-SNAPSHOT</version>
+    <version>0.1.34</version>
   </parent>
   <artifactId>an-identity-openid-ui</artifactId>
 	<build>
