--- a/an-identity-aws/an-identity-aws-impl/pom.xml
+++ b/an-identity-aws/an-identity-aws-impl/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-aws</artifactId>
-		<version>0.1.35-SNAPSHOT</version>
+		<version>0.1.35</version>
 	</parent>
 	<artifactId>an-identity-aws-impl</artifactId>
 	<dependencies>
@@ -17,22 +17,22 @@
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-auth-api</artifactId>
-			<version>0.1.35-SNAPSHOT</version>
+			<version>0.1.35</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-auth-impl</artifactId>
-			<version>0.1.35-SNAPSHOT</version>
+			<version>0.1.35</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-openid-api</artifactId>
-			<version>0.1.35-SNAPSHOT</version>
+			<version>0.1.35</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-openid-impl</artifactId>
-			<version>0.1.35-SNAPSHOT</version>
+			<version>0.1.35</version>
 		</dependency>
 
 
