--- a/an-identity-me/an-identity-me-ui/pom.xml
+++ b/an-identity-me/an-identity-me-ui/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-me</artifactId>
-		<version>0.1.35-SNAPSHOT</version>
+		<version>0.1.35</version>
 	</parent>
 	<artifactId>an-identity-me-ui</artifactId>
 	<build>
