--- a/an-identity-openid/an-identity-openid-api/pom.xml
+++ b/an-identity-openid/an-identity-openid-api/pom.xml
@@ -4,19 +4,19 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-openid</artifactId>
-		<version>0.1.35-SNAPSHOT</version>
+		<version>0.1.35</version>
 	</parent>
 	<artifactId>an-identity-openid-api</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-auth-api</artifactId>
-			<version>0.1.35-SNAPSHOT</version>
+			<version>0.1.35</version>
 		</dependency>
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-apps-api</artifactId>
-			<version>0.1.35-SNAPSHOT</version>
+			<version>0.1.35</version>
 		</dependency>
  
 	</dependencies>
