--- a/an-identity-ovpn/an-identity-ovpn-api/pom.xml
+++ b/an-identity-ovpn/an-identity-ovpn-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-ovpn</artifactId>
-		<version>0.1.43-SNAPSHOT</version>
+		<version>0.1.43</version>
 	</parent>
 	<artifactId>an-identity-ovpn-api</artifactId>
 
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-auth-api</artifactId>
-			<version>0.1.43-SNAPSHOT</version>
+			<version>0.1.43</version>
 		</dependency>
 	</dependencies>
 </project>
